# img-ft-extraction-ml

./: .gitignore  .jupyter_ystore.db  README.md  bases.ipynb  classifiers.ipynb  common.py  dtree.ipynb  hog.py  knn.ipynb  lbp.py  mlp.ipynb  naive.ipynb  presentation.ipynb  pyproject.toml  run.sh
.jupyter/: collaboration_sessions.json
dtree/: configs.csv  results.csv
knn/: results.csv  sorted.csv  sorted_unique.csv
mlp/: final_results.csv  results.csv  sorted.csv
results/: bagging_results.pkl  bagging_table.csv  final_comparison.pkl  rf_results.pkl  rf_table.csv  stacking_results.pkl  stacking_table.csv  voting_results.pkl  voting_table.csv
