[project]
name = "proj-001-hog-lbp-ml"
version = "0.1.0"
description = "Extração de caractéristicas de imagens, Aprendizado de Máquina Supervisionado, projeto 01"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scikit-learn-stubs>=0.0.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.4",
    "ruff>=0.15.8",
]

[tool.basedpyright]
reportMissingTypeStubs = false
reportAny = false
